@@ -1,0 +1,270 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-POP\u5927\u7206\u70b8\uff01NCT DREAM\u3001\u6b0a\u5fd7\u9f8d\u3001BLACKPINK\u91d1\u73cd\u59ae\u3001\u674e\u77e5\u6069\u3001Billlie\u5f37\u52e2\u56de\u6b78\uff0c10\u6708\u4efd\u6f14\u5531\u6703\u5de1\u8ff4\u3001\u97f3\u6a02\u65b0\u4f5c\u9f4a\u767c", "description": "K-POP\u5927\u7206\u70b8\uff01NCT DREAM\u3001\u6b0a\u5fd7\u9f8d\u3001BLACKPINK\u91d1\u73cd\u59ae\u3001\u674e\u77e5\u6069\u3001Billlie\u5f37\u52e2\u56de\u6b78\uff0c10\u6708\u4efd\u6f14\u5531\u6703\u5de1\u8ff4\u3001\u97f3\u6a02\u65b0\u4f5c\u9f4a\u767c", "url": "https://www.famechos.me/news/K-POP\u5927\u7206\u70b8\uff01NCT DREAM\u3001\u6b0a\u5fd7\u9f8d\u3001BLACKPINK\u91d1\u73cd\u59ae\u3001\u674e\u77e5\u6069\u3001Billlie\u5f37\u52e2\u56de\u6b78\uff0c10\u6708\u4efd\u6f14\u5531\u6703\u5de1\u8ff4\u3001\u97f3\u6a02\u65b0\u4f5c\u9f4a\u767c.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-12T09:35:01.274716+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-POP大爆炸！NCT DREAM、權志龍、BLACKPINK金珍妮、李知恩、Billlie強勢回歸，10月份演唱會巡迴、音樂新作齊發.html"/>
+<meta name="description" content="K-POP大爆炸！NCT DREAM、權志龍、BLACKPINK金珍妮、李知恩、Billlie強勢回歸，10月份演唱會巡迴、音樂新作齊發，最新消息與演唱會情報盡在此！" />
+<meta name="keywords" content="K-POP,NCT DREAM,權志龍,BLACKPINK,金珍妮,李知恩,Billlie,演唱會,音樂,新作,10月份" />
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/K-POP大爆炸！NCT DREAM、權志龍、BLACKPINK金珍妮、李知恩、Billlie強勢回歸，10月份演唱會巡迴、音樂新作齊發.html" />
+        <meta property="og:title" content="K-POP大爆炸！NCT DREAM、權志龍、BLACKPINK金珍妮、李知恩、Billlie強勢回歸，10月份演唱會巡迴、音樂新作齊發" />
+        <meta property="og:description" content="K-POP大爆炸！NCT DREAM、權志龍、BLACKPINK金珍妮、李知恩、Billlie強勢回歸，10月份演唱會巡迴、音樂新作齊發" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-POP大爆炸！NCT DREAM、權志龍、BLACKPINK金珍妮、李知恩、Billlie強勢回歸，10月份演唱會巡迴、音樂新作齊發" />
+        <meta property="twitter:description" content="K-POP大爆炸！NCT DREAM、權志龍、BLACKPINK金珍妮、李知恩、Billlie強勢回歸，10月份演唱會巡迴、音樂新作齊發" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>K-POP大爆炸！NCT DREAM、權志龍、BLACKPINK金珍妮、李知恩、Billlie強勢回歸，10月份演唱會巡迴、音樂新作齊發</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">12/10/2024</p>
+        </div>
+	<p>NCT DREAM 將於11月29日至12月1日在首爾高尺天空巨蛋舉行三場演唱會，作為其世界巡迴演唱會的結束。該組合將再次登上五月份啟動巡迴演唱會《NCT DREAM WORLD TOUR <THE DREAM SHOW 3 : DREAMSCAPE>》的同一舞台。</p>
+<p>該樂團已經訪問了亞洲八個城市、北美和拉丁美洲十一個城市，並將於10月11日開始在歐洲五個城市巡迴演出。黃仁俊預計將加入歐洲巡迴演出，因為其經紀公司SM娛樂週一告訴粉絲，他決定全面恢復活動。他因為激進粉絲行為引起的焦慮症而休息了約六個月。</p>
+<h2>音樂錄影帶拍攝現場：權志龍</h2>
+<p>權志龍準備進行個人回歸，並於週一晚上開始拍攝音樂錄影帶，當地媒體週二報導，拍攝將持續三天。另一家媒體聲稱，他確定了10月25日作為回歸日期，但接近藝人的消息人士表示，日期尚未確認。他在首爾的個人演唱會可能將於明年二月舉行，而不是一些人預測的十一月。</p>
+<h2>BLACKPINK成員金珍妮個人單曲即將登場</h2>
+BLACKPINK成員金珍妮通過上傳預告照片給粉絲瞭解她的即將發行的個人單曲。坐在一輛經典白色超級跑車的引擎蓋上，她凝視著鏡頭，散發著自信，同時暗示了單曲《Mantra》的氣氛。該單曲將於週五發行，這是她自去年發行特別個人單曲《You & Me》以來的第一首單曲。<h2>李知恩的音樂成就</h2>
+<p>四月份，李知恩的第一首個人歌曲《Solo》的音樂錄影帶在YouTube上的觀看次數突破了10億次，成為第一位K-pop女歌手達到此成就。</p>
+<h2>李知恩與Billlie的合作</h2>
+<p>李知恩為Billlie的即將發行的迷你專輯獻聲。該組合的經紀公司Mystic Story確認了這一消息，並補充說，李知恩與Billlie共同創作了迷你專輯《Appendix: Of All We Have Lost》的主打曲。該專輯將於10月16日發行，先行曲《Trampoline》將於週五發行。</p>
+<h2>Billlie 公開新專輯概念照，宣告正式返歸</h2>
+<p>Billlie 即將推出的迷你專輯以記憶碎片為主題。七位成員將展現多樣的視覺效果，就像專輯的預告照片一樣。</p>
+<p>這是該組合在文秀雅和金秀炫最近恢復團體活動後，時隔一年半的首次全員參與的作品。每位成員此前都因健康原因暫停活動。</p>
+<p>下面是 Billlie 返歸新專輯的巡演日期：</p>
+<ul>
+<li>北美和拉丁美洲的14個城市</li>
+</ul>
+<p>該組合將在這些城市進行巡演，與粉絲們見面。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/a1ThHDd7XKo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-pop巨頭CEO國會聽證會上大玩文字遊戲！榜單操縱、照片卡捆綁銷售、舞蹈版權問題全都「不知情」.html">K-pop巨頭CEO國會聽證會上大玩文字遊戲！榜單操縱、照片卡捆綁銷售、舞蹈版權問題全都「不知情」</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/新裤子Hanni挺身而出！將獨自出席國會審查揭露遭欺凌經歷.html">新裤子Hanni挺身而出！將獨自出席國會審查揭露遭欺凌經歷</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/前ADOR娛樂CEO閔熙珍爆料海譜抄襲NewJeans概念！內部吹哨人出面指控.html">前ADOR娛樂CEO閔熙珍爆料海譜抄襲NewJeans概念！內部吹哨人出面指控</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
