@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 09:33:15 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 09:35:12 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -121,5 +121,11 @@
   <description>BLACKPINK成員Jennie宣佈回歸新單曲Mantra將於10月11日發行韓國流行音樂女子組合BLACKPINK成員Jennie即將回歸樂壇她的新單曲Mantra將於10月11日發行這是她自2023年10月發行的個人數位單曲YouMe後時隔一年再次推出的個人作品Jennie在她的官方網站上宣佈了這個消息並提供了鏈接讓歌迷可以在Spotify和AppleMusic等主要串流平台上預存新曲同時她也發佈了一段Mantra的預覽片段展...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 09:33:15 +0800</pubDate>
+</item><item>
+  <title>K-POP大爆炸！NCT DREAM、權志龍、BLACKPINK金珍妮、李知恩、Billlie強勢回歸，10月份演唱會巡迴、音樂新作齊發</title>
+  <link>https://www.famechos.me/news/K-POP大爆炸！NCT DREAM、權志龍、BLACKPINK金珍妮、李知恩、Billlie強勢回歸，10月份演唱會巡迴、音樂新作齊發.html</link>
+  <description>NCTDREAM將於高尺天空巨蛋舉行三場演唱會NCTDREAM將於11月29日至12月1日在首爾高尺天空巨蛋舉行三場演唱會作為其世界巡迴演唱會的結束該組合將再次登上五月份啟動巡迴演唱會NCTDREAMWORLDTOUR的同一舞台該樂團已經訪問了亞洲八個城市北美和拉...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 09:35:12 +0800</pubDate>
 </item></channel>
 </rss>
