@@ -122,4 +122,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/K-POP大爆炸！NCT DREAM、權志龍、BLACKPINK金珍妮、李知恩、Billlie強勢回歸，10月份演唱會巡迴、音樂新作齊發.html</ns0:loc>
+    <ns0:lastmod>2024-10-12T09:35:12+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
