@@ -17,3 +17,4 @@ https://tokyocheapo.com/editorial/halloween-2024-new-rules-shibuya-shinjuku/
 https://www.koreaherald.com/view.php?ud=20241010050652
 https://tokyocheapo.com/living/moving-to-japan-hacks/
 https://www.koreaherald.com/view.php?ud=20241011050615
+https://www.koreaherald.com/view.php?ud=20241001050062
